[package]
name = "gmadrs"
version = "0.1.0"
authors = ["diogo <diogo464@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gma = {path = "../gma"}
clap = "3.0.0-beta.1"
lzma-rs = "0.1.3"
tempfile = "3.1.0"
walkdir = "2.3.1"
wildmatch = "1.0.11"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"