[package]
name = "gmadrs"
version = "0.1.2"
authors = ["diogo <diogo464@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Command line utility to interact with .gma files"
repository = "https://github.com/diogo464/gmadrs"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gma = "0.3.0"
clap = "3.0.0-beta.1"
lzma-rs = "0.1.3"
walkdir = "2.3.1"
wildmatch = "1.0.11"
nanoserde = "0.1.18"
